--- a/aula3-modificado-css.css
+++ b/aula3-modificado-css.css
@@ -30,9 +30,8 @@
 }
 
 .search-bar {
-    background:#fff;
-    height:129px;
-    color:#555;
+    height: 10vh;
+    color: white;
     padding-top:5px;
 }
 
@@ -47,17 +46,19 @@
 
 
 .search-button {
-    border:none;
-    width:50%;
-    background-color: #ddd;
-    color:#555;
-    height:50px;
-    font-size:16px;
-    display:inline-block;
+    background-color: grey;
+    color: white;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 .search-location-button {
-    border-right: 1px solid #fff;
+    background-color: grey;
+    color: white;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 .geo-button {
@@ -73,7 +74,13 @@
     .search-bar {
         height:107px;
     }
-
+    
+    .search-location-button-group {
+        padding-right: 1em;
+        padding-left: 5vw;
+        width: 10em;
+        float:right;
+    }
 }
 
 
@@ -92,6 +99,9 @@
     }
 
     .search-location-button-group {
+        padding-right: 1em;
+        padding-left: 5vw;
+        width: 10em;
         float:right;
     }
 
@@ -110,6 +120,7 @@
     }
 
     .search-location-text{
+        width: 80vw;
         font-size:24px;
         position:relative;
         top:5px;
@@ -122,8 +133,10 @@
     } 
 
     .search-location-button-group {
-        display: inline;
-        float: right;
+        padding-right: 1em;
+        padding-left: 5vw;
+        width: 10em;
+        float:right;
     }
 
     .search-button {
